--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 <br>
           
 <div>
-<img src="exploring.png" alt="selfie of me in the mattress factory museum" 
+<img src="exploring.jpeg" alt="selfie of me in the mattress factory museum" 
 class="center-image"
 style="max-width:50%; max-height:50%;">
 </div>
